--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build --mode production",
-    "test": "tsc --noEmit && eslint .",
     "fix": "eslint --fix .",
-    "preview": "vite preview"
+    "generate": "openapi-generator-cli generate -i ./api-definition.json -g typescript-fetch -o ./src/context/api --additional-properties=supportsES6=true,useSingleRequestParameter=true,useUnionTypes=true",
+    "preview": "vite preview",
+    "test": "tsc --noEmit && eslint ."
   },
   "browserslist": {
     "production": [
@@ -23,12 +24,16 @@
       "last 1 safari version"
     ]
   },
+  "openapi-generator-cli": {
+    "version": "cli-native"
+  },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@eslint/js": "^9.25.1",
     "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^7.3.5",
+    "@openapitools/openapi-generator-cli": "^2.25.1",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@types/node": "^22.15.2",
     "@types/react": "^19.1.2",
@@ -50,8 +55,8 @@
     "globals": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.2",
-    "react-router-dom": "^7.5.2",
+    "react-router": "^7.9.6",
+    "react-router-dom": "^7.9.6",
     "staticit": "^1.3.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.31.0",
