--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,4 +1,4 @@
 FROM node:24-slim
 
-RUN sudo apt-get update && \
-    sudo apt-get install -y default-jre
+RUN apt-get update && \
+    apt-get install -y default-jre
