--- a/.env/frontend.env.example
+++ b/.env/frontend.env.example
@@ -3,6 +3,8 @@ NODE_ENV=development
 #VITE_HOST=0.0.0.0
 #VITE_PORT=3000
 
+#VITE_API_ENDPOINT=
+
 #GTM_CONTAINER=
 
 # Generate your token here https://github.com/settings/personal-access-tokens, this value MUST NOT BE EMPTY for ./run deploy to work
